--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css" />
     <style> p{ 
               color: white;
-              background: rgba(94, 255, 0, 0.894);
+              background: rgba(66, 179, 0, 0.894);
               font-size: 18px
     }
       </style>
@@ -18,6 +18,6 @@
 
     <p>I would like to be styled with the internal method, please.</p>
 
-    <button> <div style="color:white; background:orange; font-size: 18px;"> Inline Method</button>
+    <button> <div style="color:rgb(0, 0, 0); background:orange; font-size: 18px; "> Inline Method</button>
   </body>
 </html>
