--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
-  </body>
+      
+     <p class="Odd">Number 1 - I'm a class!</p>
+     <div> <div class="subsection" id="Keno">Number 2 - I'm one ID.</div>
+     <div class="subsection 1"><p class="Odd Three">Number 3 - I'm a class, but cooler!</p>
+      <div class="subsection" id="ID">Number 4 - I'm another ID.</div></div> 
+      <p class="Odd">Number 5 - I'm a class!</p>
+     
+    </body>
 </html>
