--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+         <button> <div class="Black">Click Me!</div></button>
+          <button> <div class="Yellow">No, Click Me!</div></button> 
   </body>
 </html>
